--- a/view/estilos/estiloExibir.css
+++ b/view/estilos/estiloExibir.css
@@ -23,15 +23,12 @@ body{
 }
 
 #buscador {
-    width: 30%;
     margin: 1% 1% 1% auto;
     border: 2px solid black;
     border-radius: 30px;
     box-shadow: 1px 1px 5px #a2a2a2;
-    bottom: 0;
     display: flex;
     position: relative;
-    max-height: 28px;
 }
 
 #buscador form {
@@ -39,18 +36,10 @@ body{
     width: 88.5%;
 }
 
-#buscador img {
-    width: 4%;
-    margin-left: 2%;
-    padding: 1.25% 0;
-}
-
 #buscador input {   
     width: 100%;
     background-color: transparent;
     border: none;
-    font-size: 1rem;
-    min-height: 26px;
 }
 
 #buscador input:focus {
@@ -61,9 +50,12 @@ body{
 
 /* Início do main */
 
+main {
+    overflow: hidden;
+}
+
 #quantidade-resultados {
     width: 100%;
-    font-size: 1.5rem;
     text-align: center;
     padding: 2% 0;
 }
@@ -83,6 +75,7 @@ body{
     padding: 0.5%;
     opacity: 0;
     cursor: pointer;
+    z-index: 1;
 }
 
 .mover-slider-esquerda {
@@ -125,21 +118,14 @@ body{
     background-color: #514613;
 }
 
-/* .mascara-slider { _________________________________________________________________________________________________________________________
-    overflow-x: hidden;
-} */
-
 .conteudo-slider {
     white-space: nowrap;
 }
     
 .flip {
-    width: 24.72%;
     perspective: none;
     position: relative;
     display: inline-block;
-    /* white-space: normal; _________________________________________________________________________________________________________________
-    vertical-align: top; */
 }
 
 .flip:hover .resultado, .hover .resultado {
@@ -147,12 +133,7 @@ body{
 }
 
 .marcar-receita {
-    border: 0.51vw solid #514613;
     position: absolute;
-    top: -4;
-    right: -4;
-    left: -4;
-    bottom: -4;
     border-radius: 16px;
     z-index: 1;
     cursor: pointer;
@@ -162,7 +143,6 @@ body{
     position: absolute;
     width: 10%;
     top: 101%;
-    left: 45%;
     content: url('../imagens/arrow-dawn.svg');
     color: #514613;
     z-index: 1;
@@ -171,7 +151,6 @@ body{
 .resultado {    
     padding: 0.5%;
     border-radius: 10px;
-    min-height: 500px;
     position: relative;
     transition: 0.6s;
     transform-style: preserve-3d; 
@@ -183,6 +162,7 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    white-space: normal;
 }
 
 .frente {
@@ -201,7 +181,6 @@ body{
     padding: 0 5px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 1.5rem;
     font-weight: bold;
     color: #514613;
 }
@@ -210,7 +189,6 @@ body{
     width: 100%;
     height: 100%;
     transform: rotateY(180deg);
-    font-size: 1rem;
     overflow: hidden;
 }
 
@@ -224,9 +202,7 @@ body{
 }
 
 .topico-verso {
-    padding: 20px 0;
     text-align: center;
-    font-size: 1.6rem;
     font-weight: bold;
 }
 
@@ -242,8 +218,13 @@ body{
 }
 
 .arrow-dawn-resultado {
-    text-align: center;
+    width: 30%;
+    margin: 0 auto;
     padding: 2% 0;
+}
+
+.arrow-dawn-resultado img {
+    width: 100%;
 }
 
 #exibe-receita-individual {
@@ -256,11 +237,9 @@ body{
 }
 
 #conteudo-geral-individual {
-    min-height: 500px;
     background-color: #e4c94c;
     display: flex;
     color: #514613;
-    font-size: 1.4rem;    
 }
 
 #bloco-individual-esquerda, #bloco-individual-direita {
@@ -271,7 +250,6 @@ body{
     margin: 10% 10% 0 10%;
     text-align: center;
     border-bottom: 1px solid #514613;
-    font-size: 2rem;
 }
 
 #ingredientes-receita-individual {    
