--- a/view/index.html
+++ b/view/index.html
@@ -17,7 +17,7 @@
         </div>
         <div id="buscador">            
             <img src="imagens/lupa.svg" alt="Lupa de pesquisa">
-            <form method="GET" action="php/exibeBuscaOuMenu.php">
+            <form method="GET" action="php/exibeBusca.php">
                 <input type="text" size="30" autofocus name="pesquisa" required value="" placeholder="Buscar">                
             </form>
         </div>
